--- a/index.html
+++ b/index.html
@@ -5,5 +5,23 @@
   </head>
   <body>
     <!-- Write your HTML in this file -->
+    <ul>
+      <li>2 slices of bread</li>
+      <li>4 slices of cheese
+        <ul>
+          <li>cheddar</li>
+          <li>mozzarella</li>
+          <li>pepper jack</li>
+        </ul>
+      </li>
+      <li>i tbsp of butter</li>
+    </ul>
+    <ol>
+      <li>Spread butter on bread and frying pan</li>
+      <li>place bread in frying pan and fry</li>
+      <li>add cheese on top of bread</li>
+      <li>cover with second slice of bread</li>
+      <li>Turn over and fry for 2 minutes</li>
+    </ol>
   </body>
 </html>
